--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "app/main.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "app/main.py" }
-    ]
-  }
-  
+  "version": 2,
+  "functions": {
+    "app/main.py": {
+      "runtime": "python3.9"
+    }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "app/main.py" }
+  ]
+}
