--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "app/main.py": {
-      "runtime": "@vercel/python@3.9"
+  "builds": [
+    {
+      "src": "app/main.py",
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.9" }
     }
-  },
+  ],
   "routes": [
     { "src": "/(.*)", "dest": "app/main.py" }
   ]
