--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "app/main.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.13.1" }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
